--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chalk": "^3.0.0",
     "cheerio": "^1.0.0-rc.3",
     "electron": "^8.1.1",
+    "fs-copy-file": "^2.1.2",
     "lodash": "^4.17.15",
     "nightmare": "^3.0.2",
     "request": "^2.88.2",
