progress bar in screenshot module is working

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs-copy-file": "^2.1.2",
     "lodash": "^4.17.15",
     "nightmare": "^3.0.2",
+    "progress": "^2.0.3",
     "puppeteer": "^3.1.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
@@ -30,9 +31,10 @@
     "scraper": "nodemon apps.js --ignore '/files/*'",
     "html": "node utils/scrapeHtml.js",
     "screenshotter": "node utils/screenshotter.js",
-    "blog": "node app.js --url=https://www.mrksquincy.com --type=BLOG",
-    "pages-blogs": "node app.js --url=https://www.mrksquincy.com --type=PAGES-BLOGS",
-    "basic": "node app.js --url=https://www.mrksquincy.com --type=HTML",
+    "blog": "node app.js --url=https://www.allaboutblindsetc.com --type=BLOG",
+    "pages-blogs": "node app.js --url=https://www.allaboutblindsetc.com --type=PAGES-BLOGS",
+    "basic": "node app.js --url=https://www.mrksquincy.com --type=PAGES",
+    "single": "node app.js --url=https://www.mrksquincy.com/about --type=SINGLE",
     "pics": "node app.js --url=https://www.mrksquincy.com --type=SCREENSHOT",
     "kahuna": "node app.js --url=https://www.mrksquincy.com --type=ALL"
   },
